glean-core/ffi/glean.h

/**
 * The supported metrics' lifetimes.
 *
 * A metric's lifetime determines when its stored data gets reset.
 */
enum Lifetime {
  /**
   * The metric is reset with each sent ping
   */
  Lifetime_Ping,
  /**
   * The metric is reset on application restart
   */
  Lifetime_Application,
  /**
   * The metric is reset with each user profile
   */
  Lifetime_User,
};
typedef int32_t Lifetime;
/**
 * `FfiStr<'a>` is a safe (`#[repr(transparent)]`) wrapper around a
 * nul-terminated `*const c_char` (e.g. a C string). Conceptually, it is
 * similar to [`std::ffi::CStr`], except that it may be used in the signatures
 * of extern "C" functions.
 *
 * Functions accepting strings should use this instead of accepting a C string
 * directly. This allows us to write those functions using safe code without
 * allowing safe Rust to cause memory unsafety.
 *
 * A single function for constructing these from Rust ([`FfiStr::from_raw`])
 * has been provided. Most of the time, this should not be necessary, and users
 * should accept `FfiStr` in the parameter list directly.
 *
 * ## Caveats
 *
 * An effort has been made to make this struct hard to misuse, however it is
 * still possible, if the `'static` lifetime is manually specified in the
 * struct. E.g.
 *
 * ```rust,no_run
 * # use ffi_support::FfiStr;
 * // NEVER DO THIS
 * #[no_mangle]
 * extern "C" fn never_do_this(s: FfiStr<'static>) {
 *     // save `s` somewhere, and access it after this
 *     // function returns.
 * }
 * ```
 *
 * Instead, one of the following patterns should be used:
 *
 * ```
 * # use ffi_support::FfiStr;
 * #[no_mangle]
 * extern "C" fn valid_use_1(s: FfiStr<'_>) {
 *     // Use of `s` after this function returns is impossible
 * }
 * // Alternative:
 * #[no_mangle]
 * extern "C" fn valid_use_2(s: FfiStr) {
 *     // Use of `s` after this function returns is impossible
 * }
 * ```
 */
typedef const char *FfiStr;
/**
 * Configuration over FFI.
 *
 * **CAUTION**: This must match _exactly_ the definition on the Kotlin side.
 * If this side is changed, the Kotlin side need to be changed, too.
 */
typedef struct FfiConfiguration {
  FfiStr data_dir;
  FfiStr package_name;
  FfiStr language_binding_name;
  uint8_t upload_enabled;
  const int32_t *max_events;
  uint8_t delay_ping_lifetime_io;
} FfiConfiguration;
typedef const char *const *RawStringArray;
/**
 * Initialize the logging system based on the target platform. This ensures
 * that logging is shown when executing the Glean SDK unit tests.
 */
void glean_enable_logging(void);
/**
 * # Safety
 *
 * A valid and non-null configuration object is required for this function.
 */
uint8_t glean_initialize(const struct FfiConfiguration *cfg);
uint8_t glean_on_ready_to_submit_pings(void);
uint8_t glean_is_upload_enabled(void);
void glean_set_upload_enabled(uint8_t flag);
void glean_clear_application_lifetime_metrics(void);
void glean_set_dirty_flag(uint8_t flag);
uint8_t glean_is_dirty_flag_set(void);
void glean_test_clear_all_stores(void);
void glean_destroy_glean(void);
uint8_t glean_is_first_run(void);
void glean_test_register_platform_panic(void (*panic_fn)(FfiStr msg));
/**
 * Public destructor for strings managed by the other side of the FFI.
 *
 * # Safety
 *
 * This will free the string pointer it gets passed in as an argument,
 * and thus can be wildly unsafe if misused.
 *
 * See the documentation of `ffi_support::destroy_c_string` and
 * `ffi_support::define_string_destructor!` for further info.
 */
void glean_str_free(char *s);
void glean_destroy_string_metric(uint64_t v);
uint64_t glean_new_string_metric(FfiStr category,
                                 FfiStr name,
                                 RawStringArray send_in_pings,
                                 int32_t send_in_pings_len,
                                 Lifetime lifetime,
                                 uint8_t disabled);
int32_t glean_string_test_get_num_recorded_errors(uint64_t metric_id,
                                                  int32_t error_type,
                                                  FfiStr storage_name);
void glean_string_set(uint64_t metric_id, FfiStr value);
uint8_t glean_string_test_has_value(uint64_t metric_id, FfiStr storage_name);
char *glean_string_test_get_value(uint64_t metric_id, FfiStr storage_name);